[B]Version 0.3.3[/B]
- Domain update for merdb.cn.

[B]Version 0.3.2[/B]
- settings.xml: enableMeta set to true by default.

[B]Version 0.3.1[/B]
### No support for eden anymore, supports Gotham, and trying to support frodo still.
### Fix for Frodo.
- Some adjustments that had been made over time.

[B]Version 0.3.0[/B]
### These Favorite Folders can be Labeled with custom names and can be hidden by disabling them in Addon Settings.
### You can Add/Remove/Empty/List Favorites as well as Adding from one Favorites folder to another.
### default.py >> ps() | fav__empty() | fav__remove() | fav__add() | fav__list() | BrowseItems()
### settings.xml >> Movies | TV
- Favorites

[B]Version 0.2.0[/B]
- fix for Normal Search feature to allow for the better passing of title searches.

[B]Version 0.1.1[/B]
- icon.png

[B]Version 0.1.0[/B]
- initial build